--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
   <title>js assignment</title>
 </head>
 <body>
+
+
+
   <script>
     console.log("Hello world!");
+
+    let name = "Yiting";
+    let age = 28;
+    let color = "yellow";
+
+    console.log("Hi, my name is ${name}, I am ${age}, my favourite color is ${color}.");
+
+    let num1 = 10;
+    let num2 = 5;
+
+    console.log("Addition:", num1 + num2); 
+    console.log("Subtraction:", num1 - num2); 
+    console.log("Multiplication:", num1 * num2); 
+    console.log("Division:", num1 / num2); 
+
     </script>
 </body>
 </html>
